Update class website.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello, World!</h1>
+  <h1>Eric’s class website</h1>
+  <ul>
+    <li><a href="project-1/index.html">Project 1</a></li>
+  </ul>
 </body>
 </html>
