Add coding from life.

--- a/exercises/coding-from-life/index.html
+++ b/exercises/coding-from-life/index.html
@@ -4,11 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>First Last, Location at 10:00 PM</title>
+  <title>Eric Li, Still Life</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <!-- Your code here! -->
+  <div class="container">
+    <div class="candle__body"></div>
+    <div class="candle__stem"></div>
+    <div class="plant">
+      <div class="plant__pot"></div>
+      <div class="plant__leaves"></div>
+    </div>
+  </div>
 </body>
 </html>
