--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>Eric’s class website</h1>
   <ul>
     <li><a href="project-1/index.html">Project 1</a></li>
+    <li><a href="exercises/coding-from-life/index.html">Coding from Life</a></li>
   </ul>
 </body>
 </html>
